<resources>
    <string name="app_name">Auxx</string>
    <string name="signin_screen_header">Sign in to Aux</string>
    <string name="signin_with_google">Sign in with Google</string>
    <string name="password_signin_hint">Password</string>
    <string name="username_signin_hint">Username</string>
    <string name="signin_button_text">Sign in</string>
    <string name="signup_button_text">Sign up</string>
    <string name="emailaddress_signup_hint">E-mail address</string>
    <string name="password_signup_hint">Password</string>
    <string name="ask_user_end">This will End Playlist! Are you sure you can deal with that?</string>
    <string name="warning">Warning!</string>
    <string name="aux">AUX</string>
    <string name="create_room_prompt">Create a Room And Start Your Jam!</string>
    <string name="join_room_prompt">Enter a Room To Join</string>
</resources>
