<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2e2e2e"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:weightSum="100">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="28"
        android:weightSum="14"
        android:orientation="horizontal">
        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"/>
        <ImageView
            android:id="@+id/aux_logo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"/>
        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="9"
        android:gravity="center"
        android:weightSum="6">

        <EditText
            android:id="@+id/email_signup_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:fontFamily="sans-serif"
            android:hint="@string/emailaddress_signup_hint"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingBottom="8dp"
            android:paddingStart="3dp"
            android:textColor="#fff"
            android:textColorHint="#cdcdcd"
            android:textSize="@dimen/button_text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:weightSum="6"
        android:layout_weight="9">

        <EditText
            android:id="@+id/password_signup_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:fontFamily="sans-serif"
            android:hint="@string/password_signup_hint"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingBottom="8dp"
            android:paddingStart="3dp"
            android:textColor="#fff"
            android:textColorHint="#cdcdcd"
            android:textSize="@dimen/button_text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="6"
        android:layout_weight="9">

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"/>

        <android.support.v7.widget.CardView
            android:id="@+id/aux_signup_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="2dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/signup_button_text"
                android:textColor="#FFF"
                android:textSize="@dimen/button_text_size" />

        </android.support.v7.widget.CardView>

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"/>

    </LinearLayout>

</LinearLayout>